# doc-drill

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260416_f3dd9f1df5d3_create_initial_tables.py  20260417_56656963c65f_add_questions_table.py  20260417_a0bcac69c59e_add_cascade_delete_to_questions_.py  20260426_46873509dc6b_add_source_type_and_nullable_s3_key_to_.py  20260502_976391a750a9_drop_kb_document_id_from_documents.py  20260502_aa466cc7e646_add_document_chunks_with_pgvector.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/dependencies/: user.py
backend/app/models/: document.py  document_chunk.py  question.py  user.py
backend/app/routers/: documents.py  questions.py
backend/app/schemas/: document.py  question.py
backend/app/services/: bedrock.py  embeddings.py  knowledge_base.py  pdf_parser.py  s3.py  vector_store.py
backend/scripts/: verify_rag.py
backend/tests/: conftest.py
backend/tests/routers/: test_documents.py  test_questions.py
backend/tests/services/: test_bedrock.py  test_knowledge_base.py  test_pdf_parser.py  test_s3.py
docs/: adr.md  architecture.md  infra-dependency.md  roadmap.md  spec.md  structure-backend.md  structure-frontend.md  structure-infra.md  structure.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
infra/: alb.tf  backend.tf  database.tf  ecs.tf  iam.tf  main.tf  networking.tf  outputs.tf  storage.tf  tfplan  variables.tf  (+1 more)
(+33 files in other folders)
