[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "boto3>=1.34",
    "pydantic-settings>=2.0",
]
